--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,15 @@
-h1 {
-  font-family: 'Playfair Display', 'Trebuchet MS', 'Lucida Sans Unicode', Arial, sans-serif;
+h1, h2, p {
+  font-family: 'Raleway', Arial, sans-serif;
   font-size: 5rem;
   color: white;
+}
+h2 {
+  font-size: 2rem;
+}
+p {
+  font-size: 1rem;
+}
+
+.container #myheader {
+  margin-top: 8rem;
 }
