--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,12 +4,18 @@ h1, h2, p {
   color: white;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 p {
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
-.container #myheader {
+#myheader {
   margin-top: 8rem;
+}
+#mylogo h2 {
+  cursor: pointer;
+}
+#mylogo h2 span {
+  color: #0040db;
 }
