--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,57 +1,76 @@
-<div class="container">
-  <div id="myheader" *ngIf="displayHeader" class="row">
+<section class="navigation">
+  <nav [@logoAnimation]="isLogoAnimation" class="navbar fixed-bottom" routerLink="/">
+      <a class="navbar-brand">Time <span>=</span> Money</a>
+  </nav>
+</section>
+
+<section class="attention" *ngIf="displayAttention">
+  <div class="row">
     <div class="col-1"></div>
     <div class="col-10">
-        <h1 class="text-center" [@headerAnimation]="getHeaderAnimation()" (@headerAnimation.start)="onAnimationEventStart($event)" (@headerAnimation.done)="onAnimationEventDone($event)">Time is money,</h1>
-        <h1 class="text-center" [@headerAnimation]="getHeaderAnimation()" (@headerAnimation.start)="onAnimationEventStart($event)" (@headerAnimation.done)="onAnimationEventDone($event)">don't you want more?</h1>
+        <h1 class="text-center" [@attentionAnimation]="isAttentionAnimation" (@attentionAnimation.done)="onAttentionAnimationDone($event)">Time is money,</h1>
+        <h1 class="text-center" [@attentionAnimation]="isAttentionAnimation">don't you want more?</h1>
     </div>
     <div class="col-1"></div>
   </div>
-  <div id="mylogo" class="row mt-2" [@logoAnimation]="getLogoAnimation()">
-    <div class="col">
-        <h2>Time <span>=</span> Money</h2>
+</section>
+
+<section *ngIf="displayBody" class="body">
+  <div class="container">
+
+    <div id="explanation" class="row mt-3">
+      <div class="col">
+        <p>
+          <span [@body1Animation]="isBody1Animation">Since time is money, you need to conserve your time. </span>
+          <span [@body2Animation]="isBody2Animation">But how?</span></p>
+        <p [@body3Animation]="isBody3Animation">For any task, I'll help you calculate whether you should do it, or get someone else to do it for you.</p>
+        <p [@body4Animation]="isBody4Animation">Begin by entering a couple details about yourself below, and I'll let you know what I think.</p>
+      </div>
     </div>
-  </div>
-  <div class="mybody" *ngIf="displayBody" class="row">
-    <div class="col">
-      <p><span [@body1Animation]="isBody1Animation">Since time is money, you need to conserve your time.</span><span [@body2Animation]="isBody2Animation"> But how?</span></p>
-      <p [@body3Animation]="isBody3Animation">For any given task, I'll help you calculate whether you should do it, or you should get someone else to do it for you.</p>
-      <p [@body4Animation]="isBody4Animation">Begin by entering a couple details about yourself below, and I'll let you know what I think.</p>
-    </div>
-  </div>
-  <div id="myform" class="row">
-    <div class="col">
-      <form class="bg-muted p-2 rounded text-white" [@body5Animation]="isBody5Animation" >
-        <div class="row">
-          <div class="col-sm-6">
-            <small class="text-white">Enter your yearly after-tax income here.</small>
-            <input type="text" class="form-control" placeholder="After-Tax Income">
+
+    <div id="form" class="row">
+      <div class="col">
+        <form class="text-white" [@body5Animation]="isBody5Animation" #f="ngForm">
+          <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+              <label>Do you know your yearly after-tax income?</label>
+              <div id="radioYes" class="form-check d-inline-block">
+                <input class="form-check-input" type="radio" name="after-tax-income" id="yes" value="option1" checked [(ngModel)]="option1">
+                <label class="form-check-label" for="yes">Yes</label>
+              </div>
+              <div id="radioNo" class="myradio2 form-check d-inline-block">
+                <input class="form-check-input" type="radio" name="after-tax-income" id="no" value="option2">
+                <label class="form-check-label" for="no">No</label>
+              </div>
+            </div>
           </div>
-          <div class="col-sm-6">
-            <small class="d-block" style="color: #ffc425">If you don't know your yearly after-tax income fill out this column instead!</small>
-            <small class="text-white">Enter your yearly income.</small>
-            <input type="text" class="form-control" placeholder="Income">
-            <small class="text-white">Now estimate your tax rate from the dropdown, 30% is the average for Canadians.</small>
-            <div class="form-group">
-                <label for="taxrate">Tax Rate</label>
+          <div class="row" *ngIf="afterTaxIncomeKnown">
+            <div class="col-sm-6 offset-sm-3">
+              <label>Yearly After-Tax Income</label>
+              <input type="text" class="form-control" placeholder="Enter After-Tax Income">
+            </div>
+          </div>
+          <div class="row" *ngIf="!afterTaxIncomeKnown">
+            <div class="col-sm-6 offset-sm-3">
+              <label>Yearly Income</label>
+              <input type="text" class="form-control mb-2" placeholder="Enter Income">
+              <div class="form-group">
+                <label for="taxrate" class="d-block mb-0">Tax Rate</label>
+                <small>Now estimate your tax rate from the dropdown, 30% is the average for Canadians.</small>
                 <select class="form-control" id="taxrate">
-                  <option>0%</option>
-                  <option>10%</option>
-                  <option>20%</option>
-                  <option selected="selected">30%</option>
-                  <option>40%</option>
-                  <option>50%</option>
-                  <option>60%</option>
+                  <option *ngFor="let rate of taxRates" [selected]="isSelected(rate)">{{ rate }}%</option>
                 </select>
               </div>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary mt-2 p-2 w-50">Submit</button>
+          <div class="row">
+            <div class="col d-flex justify-content-center">
+              <button type="submit" class="btn btn-primary mt-2 p-2 w-50">Next</button>
+            </div>
           </div>
-        </div>
-      </form>
+        </form>
+      </div>
     </div>
+
   </div>
-</div>
+</section>
